--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-firefox-autocomplete",
+  "name": "react-combo-box,
   "version": "0.1.0",
   "private": true,
   "dependencies": {
